# laam_control_ws

./: README.md
devel/: .catkin  local_setup.sh
devel/include/camera_monitoring/: MsgAcceleration.h  MsgGeometry.h  MsgPosition.h  MsgStatus.h  MsgTwist.h  MsgVelocity.h  MsgVelocityStatus.h
devel/include/laam_laser_control/: MsgControl.h  MsgEmission.h  MsgInfo.h  MsgPower.h  MsgSetpoint.h  MsgStart.h
devel/include/labjack_ros/: MsgLabJack.h
devel/lib/pkgconfig/: camera_monitoring.pc  laam_laser_control.pc  labjack_ros.pc
reference_code/dependencies/LabJackPython-5-26-2015/: ChangeLog.txt
src/camera_monitoring/: CMakeLists.txt  package.xml  setup.py
src/camera_monitoring/launch/: camera_measures.launch  camera_monitoring.launch  velocity_acceleration_measures.launch  velocity_acceleration_simulation.launch  velocity_measures.launch
src/camera_monitoring/msg/: MsgAcceleration.msg  MsgGeometry.msg  MsgPosition.msg  MsgTwist.msg  MsgVelocityStatus.msg
src/camera_monitoring/scripts/: control_data.py  nd_geometry.py  nd_laser_supervisor.py  nd_moments.py  nd_supervisor.py  nd_velocity.py  nd_velocity_kuka.py  nd_velocity_kuka_v2.py  nd_velocity_supervisor.py
src/dependency/: README.md
src/laam_laser_control/config/: control_parameters.yaml
src/laam_laser_control/launch/: control.launch  vrft_adaptive_autocontrol.launch  (+1 more)
src/labjac_ros/: README.md  package.xml
src/labjac_ros/dependency/LabJackPython-master/: ChangeLog.txt
src/labjac_ros/launch/: labjack.launch
src/labjac_ros/src/labjack/: labjack.py
src/labjack_ros/: CMakeLists.txt  README.md
(+107 files in other folders)
